--- a/docker/.env
+++ b/docker/.env
@@ -1,6 +1,6 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=base64:Eb8exjA1AVLRiA5Hh1HXOjNv7BVTvGwRFwViIA3NUzg=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
@@ -10,9 +10,16 @@ LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=db
+DB_PORT=3306
 DB_DATABASE=user_micro_service
 DB_USERNAME=service_root
 DB_PASSWORD=password
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+BROADCAST_DRIVER=log
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=ap4
